# fiutils

./: MANIFEST.in  README.md  db.py  params.py  plot.py  pyproject.toml  utils.py
hardware/: __init__.py  chipshouter2.py  spider.py
notebooks/: 000-simple-template.ipynb  000-simple-template.py  080-simple-plot-template.html  080-simple-plot-template.ipynb
openocd/: operations.py
pico_upy/: README.md  api.py  picoprobe.py  trigger_comm_spi.py  trigger_simple_pio.py  trigger_uart_bytes_cpu_irq.py  trigger_uart_single_byte.py  trigger_uart_single_byte_extra.py
src/fiutils/: __init__.py  params.py  plot.py  stm32.py  utils.py
src/fiutils/hardware/: chronology.py
src/fiutils/openocd/: openocd.py
src/fiutils/pico_upy/: picodac.py  trigger_swd_frame.py  trigger_swd_frame_extra.py
